@@ -48,6 +48,7 @@
 		<script type="text/javascript" src="js/buildings/im/air_defence_site.js"></script>
 		<script type="text/javascript" src="js/buildings/im/repair_station.js"></script>
 		<script type="text/javascript" src="js/buildings/im/temporal_gate.js"></script>
+		<script type="text/javascript" src="js/buildings/im/rearming_deck.js"></script>
 		<script type="text/javascript" src="js/buildings/dependencies.js"></script>
 		
 		<script type="text/javascript" src="js/units/abstract.js"></script>
