@@ -1,6 +1,5 @@
 To do:
 	- Allow unit to shoot not only to the center of the building
-	- Add tactical groups
 
 - High priority bugs:
 
